[package]
name = "pro"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
home = "0.5.4"
run_shell = "0.1.13"
serde_derive = "1.0.160"
serde = "1.0.160"
toml = "0.7.3"
colored = "2.0.0"
tiny_http = "0.12.0"
url = "2.3.1"
serde_json = "1.0.96"
